Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-915

Incompatible protocol header handled incorrectly

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.9, proton-0.9.1
    • proton-0.10
    • proton-c
    • None

    Description

      The correct response is to send back a supported header[1] before closing the socket. This worked for 0.8 but is broker from 0.9 onwards, I believe by this commit: https://git-wip-us.apache.org/repos/asf?p=qpid-proton.git;a=commit;h=1b2be03c748ef5a57cf181f8373b9b6e8f8cfd22

      It means anything relying on proton-c for protocol header handling is not compliant with the spec.

      [1] section 2.2 of spec: "If the requested protocol version is not supported, the server MUST send a protocol header with a supported protocol version and then close the socket."

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            rhs Rafael H. Schloming
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment