PROTON-915: Send correct AMQP header upon protocol mismatch - Split apart the transport tests into client and server tests